# avi-net-device

./: ARCHITECTURE.md  Cargo.toml  ESP32_SETUP.md  README.md
embedded/: Cargo.toml  README.md  build.sh  cbindgen.toml
embedded-esp/: Cargo.toml
embedded-esp/src/: lib.rs
embedded/output/: avi_embedded.h
embedded/src/: c_api.rs  lib.rs
esp32-avi-device/: Cargo.toml  sdkconfig.defaults
esp32-avi-device/src/: main.rs
examples/: audio_chat.rs  device_chat.rs  device_context.rs  device_pubsub.rs  device_query.rs  device_stream.rs  discovery_monitor.rs  gateway_with_pubsub.rs  resilient_pubsub.rs  simple_node.rs  simulated_mcu_pubsub.rs
p2p/: README.md
p2p/src/: bridge.rs  command.rs  config.rs  error.rs  events.rs  lib.rs  node.rs  runtime.rs
p2p/src/protocols/: context.rs  mod.rs  stream.rs
src/: behaviour.rs  capability.rs  command.rs  config.rs  context.rs  device.rs  error.rs  events.rs  lib.rs  node.rs  query.rs  runtime.rs  stream.rs
src/protocols/: audio.rs  stream.rs
