[package]
name = "avi-p2p"
version = "0.1.0"
edition = "2021"
description = "Production-grade P2P abstraction for AVI Core"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
    "request-response",
    "macros",
    "dns",
    "tokio",
] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
bytes = "1.5"
async-trait = "0.1"
unsigned-varint = "0.8"
config = "0.15.19"
serde_json = "1.0.147"