[package]
name = "avi-device"
version = "0.3.1"
edition = "2021"
description = "Device Comunication for AVI systems"

[workspace]
members = [
    "protocol",
    "embedded",
    "embedded-esp",
    "p2p"
]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde_json = "1.0.147"
avi-p2p = { path = "./p2p" }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
futures = "0.3"

[dev-dependencies]
avi-p2p-protocol = { path = "./protocol" }
avi-p2p-embedded = { path = "./embedded" }
avi-p2p-embedded-esp = { path = "./embedded-esp" }
