[package]
name = "avi-p2p-embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
avi_p2p_protocol = { path = "../protocol" }
serde = { version = "1.0", default-features = false }
postcard = { version = "1.0", default-features = false }

embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.6", features = ["arch-std", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3" }
heapless = "0.8"

critical-section = { version = "1.1", features = ["restore-state-u8"] }

[features]
default = ["c-api"]
c-api = []

[lib]
crate-type = ["staticlib", "rlib"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols
