[package]
name = "esp32-avi-device"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "esp32-avi-device"
path = "src/main.rs"

[dependencies]
avi-p2p-embedded = { path = "../embedded" }
avi-p2p-embedded-esp = { path = "../embedded-esp" }
avi-p2p-protocol = { path = "../protocol" }

esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-sys = "0.34"
embedded-svc = "0.27"
esp-println = "0.9"

[build-dependencies]
embuild = "0.31"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
